k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-ingress
  namespace: atlas-events
spec:
  tls:
    - hosts:
        - atlas-events.ma
      secretName: atlas-prod-tls
  rules:
    - host: atlas-events.ma
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: atlas-api-service
                port:
                  number: 8080
          - path: /ical
            pathType: Prefix
            backend:
              service:
                name: atlas-api-service
                port:
                  number: 8080
          - path: /actuator/
            pathType: Prefix
            backend:
              service:
                name: atlas-api-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-web-service
                port:
                  number: 80
